--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="col-6 col-md-3">
                                 <div class="quick-action-wrapper position-relative">
-                                    <a href="{{ url_for('watchlist_advanced.index') }}" class="btn btn-outline-dark w-100 h-100 d-flex flex-column align-items-center justify-content-center p-3 quick-action-btn" data-bs-toggle="tooltip" title="Overvåk favorittaksjer">
+                                    <a href="{{ url_for('watchlist_advanced.watchlist_index') }}" class="btn btn-outline-dark w-100 h-100 d-flex flex-column align-items-center justify-content-center p-3 quick-action-btn" data-bs-toggle="tooltip" title="Overvåk favorittaksjer">
                                         <i class="bi bi-heart-fill fs-1 mb-2 text-dark"></i>
                                         <span class="fw-bold">Watchlist</span>
                                         <small class="text-muted mt-1 d-none d-md-block">{{ user_stats.watchlist_items }} aksjer</small>
