--- a/app/templates/base_clean.html
+++ b/app/templates/base_clean.html
@@ -519,7 +519,7 @@
                                                     <li><a class="dropdown-item" href="{{ url_for('portfolio.create_portfolio') }}"><i class="fas fa-plus-circle"></i> Opprett portefølje</a></li>
                                                     <li><hr class="dropdown-divider"></li>
                                                     <li><a class="dropdown-item" href="{{ url_for('portfolio.watchlist') }}"><i class="fas fa-eye"></i> Watchlist</a></li>
-                                                    <li><a class="dropdown-item" href="{{ url_for('watchlist_advanced.index') }}"><i class="fas fa-eye"></i> Avansert Watchlist</a></li>
+                                                    <li><a class="dropdown-item" href="{{ url_for('watchlist_advanced.watchlist_index') }}"><i class="fas fa-eye"></i> Avansert Watchlist</a></li>
                                                     <li><hr class="dropdown-divider"></li>
                                                     <li><a class="dropdown-item" href="{{ url_for('portfolio.stock_tips') }}"><i class="fas fa-lightbulb"></i> Aksjetips</a></li>
                                                     <li><hr class="dropdown-divider"></li>
