--- a/app/templates/portfolio_audit_history.html
+++ b/app/templates/portfolio_audit_history.html
@@ -19,11 +19,10 @@
       </select>
     </div>
     <div class="col-md-2">
-      <select name="page" class="form-select form-select-sm">
-        {% for p in range(1, total_pages+1) %}
-          <option value="{{ p }}" {% if p==page %}selected{% endif %}>Page {{ p }}</option>
-        {% endfor %}
-      </select>
+      <input type="date" name="start_date" value="{{ request.args.get('start_date','') }}" class="form-control form-control-sm" placeholder="Start date" />
+    </div>
+    <div class="col-md-2">
+      <input type="date" name="end_date" value="{{ request.args.get('end_date','') }}" class="form-control form-control-sm" placeholder="End date" />
     </div>
     <div class="col-md-2">
       <button type="submit" class="btn btn-sm btn-primary">Filter</button>
@@ -62,12 +61,7 @@
       </tbody>
     </table>
   </div>
-  <nav aria-label="Page navigation">
-    <ul class="pagination pagination-sm">
-      <li class="page-item {% if page<=1 %}disabled{% endif %}"><a class="page-link" href="{{ url_for('portfolio.audit_history', **request.args.to_dict(), page=page-1) }}">Prev</a></li>
-      <li class="page-item disabled"><a class="page-link">Page {{ page }} / {{ total_pages }}</a></li>
-      <li class="page-item {% if page>=total_pages %}disabled{% endif %}"><a class="page-link" href="{{ url_for('portfolio.audit_history', **request.args.to_dict(), page=page+1) }}">Next</a></li>
-    </ul>
-  </nav>
+  {% from 'macros/pagination.html' import pagination %}
+  {{ pagination(page, total_pages, lambda p: url_for('portfolio.audit_history', **request.args.to_dict(), page=p)) }}
 </div>
 {% endblock %}
